gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/issue23947.d
version https://git-lfs.github.com/spec/v1
oid sha256:d8e11b634677308aed9a750e346438f18be65d6c8e2d1eade9271fee2406d04e
size 298
